--- a/config/services.yml
+++ b/config/services.yml
@@ -2,6 +2,6 @@ services:
     javiexin.nndeletepm.listener:
         class: javiexin\nndeletepm\event\main_listener
         arguments:
-            - @dbal.conn
+            - '@dbal.conn'
         tags:
             - { name: event.listener }
