--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "javiexin/nndeletepm",
 	"type": "phpbb-extension",
 	"description": "When a post is deleted before being sent (ie, in the outbox), it is deleted without notice to others",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"time": "2016-11-18",
 	"keywords": ["phpbb", "extension", "nndeletepm", "delete", "pm"],
 	"license": "GPL-2.0",
@@ -23,7 +23,7 @@
 	"extra": {
 		"display-name": "No Notice Delete PM",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.1.0,<3.2.*@dev"
+			"phpbb/phpbb": "~3.1.0||~3.2.0"
 		}
 	}
 }
